--- a/Control_Systems_Solver/package.json
+++ b/Control_Systems_Solver/package.json
@@ -9,8 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "rxjs": "^6.5.5",
+    "uuid": "^8.0.0",
+    "viz.js": "^2.1.2",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-color": "^2.7.1",
+    "vue-router": "^4.3.0",
+    "vue3-visjs": "^0.7.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
