forward paths and final answer done

--- a/Control_Systems_Solver/package.json
+++ b/Control_Systems_Solver/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "mathjs": "^12.4.1",
     "rxjs": "^6.5.5",
+    "serve": "^14.2.1",
     "uuid": "^8.0.0",
     "viz.js": "^2.1.2",
-    "mathjs": "^12.4.1",
     "vue": "^3.4.21",
     "vue-color": "^2.7.1",
     "vue-router": "^4.3.0",
