--- a/Control_Systems_Solver/package.json
+++ b/Control_Systems_Solver/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mathjs": "^12.4.1",
+    "module": "^1.2.5",
     "pythonia": "^1.1.3",
     "rxjs": "^6.5.5",
     "serve": "^14.2.1",
